--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 theory_diamond_pattern_with_asteriks.exe
 Theory/Diamond Patterns/week7_diamond_pattern_no_space.exe
+Theory/Chap 4 - Book/4_10_pg229_avg_num_sentenial.exe
+Theory/Diamond Patterns/theory_diamond_pattern_with_input.exe
+Theory/Diamond Patterns/right_angle_trianlge.exe
+Theory/Diamond Patterns/diamond_pattern_with_alphabets.exe
+Theory/Diamond Patterns/vertically_flip_right_angle_triangle.exe
+Theory/Diamond Patterns/triangle_pyramid.exe
