Theory Hollow Diamond pattern

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Theory/Diamond Patterns/diamond_pattern_with_alphabets.exe
 Theory/Diamond Patterns/vertically_flip_right_angle_triangle.exe
 Theory/Diamond Patterns/triangle_pyramid.exe
 Theory/Chap 4 - Book/4_32_pg233_diamond_with_input.exe
+Theory/Diamond Patterns/hollow_diamond.exe
