Theory 1-100 multiplication table

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Theory/Diamond Patterns/triangle_pyramid.exe
 Theory/Chap 4 - Book/4_32_pg233_diamond_with_input.exe
 Theory/Diamond Patterns/hollow_diamond.exe
 Theory/Chap 4 - Book/4_9_pg228_sum_of_numbers_depending_on_first_input.exe
+Theory/1_100_table.exe
