--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Theory/Chap 4 - Book/4_9_pg228_sum_of_numbers_depending_on_first_input.exe
 Theory/1_100_table.exe
 lcm.exe
 Theory/multiplication_table_by_input.exe
+Theory/number_right_angle_triangle.exe
