number square and cube

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Theory/1_100_table.exe
 lcm.exe
 Theory/multiplication_table_by_input.exe
 Theory/number_right_angle_triangle.exe
+Theory/number_square_cube.exe
