mid 25 Alphabet diamond pattern

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ lcm.exe
 Theory/multiplication_table_by_input.exe
 Theory/number_right_angle_triangle.exe
 Theory/number_square_cube.exe
+Theory/mid25_alphabet_diamond.exe
