Mid 2025 Alphabet diamond pattern

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Theory/multiplication_table_by_input.exe
 Theory/number_right_angle_triangle.exe
 Theory/number_square_cube.exe
 Theory/mid25_alphabet_diamond.exe
+Theory/Mid2025/mid25_alphabet_diamond.exe
