--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Theory/number_right_angle_triangle.exe
 Theory/number_square_cube.exe
 Theory/mid25_alphabet_diamond.exe
 Theory/Mid2025/mid25_alphabet_diamond.exe
+Lab/Lec 3 - If Else/IfElse_leap_year.exe
