--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Theory/number_square_cube.exe
 Theory/mid25_alphabet_diamond.exe
 Theory/Mid2025/mid25_alphabet_diamond.exe
 Lab/Lec 3 - If Else/IfElse_leap_year.exe
+Lab/Lec 6 - Loops/Do While/odd_numbers.exe
+Lab/Lec 6 - Loops/Do While/positive_input.exe
