FOP Lab  Lec-6 Loops

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ Theory/Mid2025/mid25_alphabet_diamond.exe
 Lab/Lec 3 - If Else/IfElse_leap_year.exe
 Lab/Lec 6 - Loops/Do While/odd_numbers.exe
 Lab/Lec 6 - Loops/Do While/positive_input.exe
+Lab/Lec 6 - Loops/Nested Loops/half_diamond.exe
+Lab/Lec 6 - Loops/Nested Loops/pattern.exe
+Lab/Lec 6 - Loops/Nested Loops/right_angled_triangle.exe
