FOP Mid 2025 Sec-H Code-A

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Lab/Lec 6 - Loops/Do While/positive_input.exe
 Lab/Lec 6 - Loops/Nested Loops/half_diamond.exe
 Lab/Lec 6 - Loops/Nested Loops/pattern.exe
 Lab/Lec 6 - Loops/Nested Loops/right_angled_triangle.exe
+Theory/Mid2025/Sec-H Code-A/number_series_pattern.exe
+Theory/Mid2025/Sec-H Code-A/number_diamond_pattern.exe
+Theory/Mid2025/Sec-H Code-A/class_avg_sentinel.exe
