--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Lab/Lec 6 - Loops/Nested Loops/right_angled_triangle.exe
 Theory/Mid2025/Sec-H Code-A/number_series_pattern.exe
 Theory/Mid2025/Sec-H Code-A/number_diamond_pattern.exe
 Theory/Mid2025/Sec-H Code-A/class_avg_sentinel.exe
+Lab/Lec 6 - Loops/Do While/number_reversing.exe
