FOP Lab Lec-6 Loops Do-While

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Theory/Mid2025/Sec-H Code-A/number_series_pattern.exe
 Theory/Mid2025/Sec-H Code-A/number_diamond_pattern.exe
 Theory/Mid2025/Sec-H Code-A/class_avg_sentinel.exe
 Lab/Lec 6 - Loops/Do While/number_reversing.exe
+Lab/Lec 6 - Loops/Do While/guessing_random_number.exe
