--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,26 @@ Lab/Lec 6 - Loops/Nested Loops/half_diamond.exe
 Lab/Lec 6 - Loops/Nested Loops/pattern.exe
 Lab/Lec 6 - Loops/Do While/number_reversing.exe
 Lab/Lec 6 - Loops/Do While/guessing_random_number.exe
+Lab/Lec 6 - Loops/While Loop/1_10_numbers.exe
+Lab/Lec 6 - Loops/While Loop/10_1_numbers.exe
+Lab/Lec 6 - Loops/While Loop/even_numbers.exe
+Lab/Lec 6 - Loops/While Loop/factorial.exe
+Lab/Lec 6 - Loops/While Loop/number_reverse.exe
+Lab/Lec 6 - Loops/While Loop/odd_numbers.exe
+Theory/number_square_cube_horizontally.exe
+Theory/Mid2025/sentinal_loop_program.exe
+Theory/Chap 4 - Book/decimal_to_binary_converter.exe
+Theory/Chap 4 - Book/4_11.exe
+Lab/Lec 5 &  6 - Loops/While Loop/odd_numbers.exe
+Lab/Lec 5 &  6 - Loops/While Loop/number_reverse.exe
+Lab/Lec 5 &  6 - Loops/While Loop/factorial.exe
+Lab/Lec 5 &  6 - Loops/While Loop/even_numbers.exe
+Lab/Lec 5 &  6 - Loops/While Loop/10_1_numbers.exe
+Lab/Lec 5 &  6 - Loops/While Loop/1_10_numbers.exe
+Lab/Lec 5 &  6 - Loops/Nested Loops/right_angled_triangle.exe
+Lab/Lec 5 &  6 - Loops/Nested Loops/pattern.exe
+Lab/Lec 5 &  6 - Loops/Nested Loops/half_diamond.exe
+Lab/Lec 5 &  6 - Loops/Do While/positive_input.exe
+Lab/Lec 5 &  6 - Loops/Do While/odd_numbers.exe
+Lab/Lec 5 &  6 - Loops/Do While/number_reversing.exe
+Lab/Lec 5 &  6 - Loops/Do While/guessing_random_number.exe
