--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Lab/Lec 5 &  6 - Loops/Do While/positive_input.exe
 Lab/Lec 5 &  6 - Loops/Do While/odd_numbers.exe
 Lab/Lec 5 &  6 - Loops/Do While/number_reversing.exe
 Lab/Lec 5 &  6 - Loops/Do While/guessing_random_number.exe
+Lab/Lec 4 - Switch Case/days.exe
