FOP Lab Lec-4  Switch-Case , unit conversion calculator

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ Lab/Lec 5 &  6 - Loops/Do While/odd_numbers.exe
 Lab/Lec 5 &  6 - Loops/Do While/number_reversing.exe
 Lab/Lec 5 &  6 - Loops/Do While/guessing_random_number.exe
 Lab/Lec 4 - Switch Case/days.exe
+Lab/Lec 4 - Switch Case/q4_unit_conversion_calculator.exe
