--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ Lab/Lec 4 - Switch Case/days.exe
 Lab/Lec 4 - Switch Case/q4_unit_conversion_calculator.exe
 Theory/Arrays/magic_cube.exe
 Theory/Strings/pattern.exe
+Lab/lec 8/3_insert_element.exe
+Lab/lec 8/3_insert_element.exe
